--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -15,12 +15,17 @@ if(DEFINED ENV{MQTT_USER})
     set(MQTT_USER $ENV{MQTT_USER})
 endif()
 
-if(DEFINED ENV{MQTT_PASS})
+if(DEFINED ENV{MQTT_PASSWD})
     set(MQTT_PASSWD $ENV{MQTT_PASSWD})
+endif()
+
+if(DEFINED ENV{MQTT_BASE_TOPIC})
+    set(MQTT_BASE_TOPIC $ENV{MQTT_BASE_TOPIC})
 endif()
 
 target_compile_definitions(${COMPONENT_LIB} PRIVATE 
     MQTT_URL="${MQTT_URL}"
     MQTT_USER="${MQTT_USER}"
     MQTT_PASSWD="${MQTT_PASSWD}"
+    MQTT_BASE_TOPIC="${MQTT_BASE_TOPIC}"
 )
