build: print MQTT config values from environment variables

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -29,3 +29,8 @@ target_compile_definitions(${COMPONENT_LIB} PRIVATE
     MQTT_PASSWD="${MQTT_PASSWD}"
     MQTT_BASE_TOPIC="${MQTT_BASE_TOPIC}"
 )
+
+message(STATUS "MQTT_URL = ${MQTT_URL}")
+message(STATUS "MQTT_USER = ${MQTT_USER}")
+message(STATUS "MQTT_PASSWD = ${MQTT_PASSWD}")
+message(STATUS "MQTT_BASE_TOPIC = ${MQTT_BASE_TOPIC}")
